Workspace module + background script

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="popup.css">
 		<script defer src="../lib/chrome-extension-async.js"></script>
-		<script defer src="popup.js"></script>
+		<script defer type="module" src="popup.js"></script>
 	</head>
 	<body>
 		<div id="container">loading...</div>
