New data model  - tabs and workspaces in separate storage items

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -8,6 +8,7 @@
 	</head>
 	<body>
 		<div id="container">loading...</div>
+		<button id="reload">reload</button>
 
 		<template id="template-item">
 			<div class="item">{title}</div>
