--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -20,9 +20,23 @@
 			<label for="workspace-name">Name</label>
 			<input type="text" id="workspace-name" />
 
+			<label>Icon</label>
+			<div id="workspace-icon-picker">
+				<button class="icon" data-icon="home"><i class="bi bi-home"></i></button>
+				<button class="icon" data-icon="star"><i class="bi bi-star"></i></button>
+				<button class="icon" data-icon="work"><i class="bi bi-work"></i></button>
+				<button class="icon" data-icon="travel"><i class="bi bi-travel"></i></button>
+				<button class="icon" data-icon="buy"><i class="bi bi-buy"></i></button>
+				<button class="icon" data-icon="read"><i class="bi bi-read"></i></button>
+				<button class="icon" data-icon="smile"><i class="bi bi-smile"></i></button>
+				<button class="icon" data-icon="media"><i class="bi bi-media"></i></button>
+				<button class="icon" data-icon="game"><i class="bi bi-game"></i></button>
+				<button class="icon" data-icon="gift"><i class="bi bi-gift"></i></button>
+			</div>
+
 			<div class="buttons">
-				<button id="workspace-remove">Remove</button>
-				<button class="submit" id="workspace-save">Done</button>
+				<button class="button" id="workspace-remove">Remove</button>
+				<button class="button primary" id="workspace-save">Done</button>
 			</div>
 		</div>
 	</body>
