Add button redesign

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -12,6 +12,7 @@
 		<div id="view-list" class="view view-active">
 			<h1>Workspaces</h1>
 			<div id="workspace-list">...</div>
+			<button id="new-workspace-button"><i class="bi bi-plus"></i>Add New</button>
 		</div>
 
 		<div id="view-detail" class="view">
