Roboto font, design polishing

--- a/app/popup/popup.html
+++ b/app/popup/popup.html
@@ -2,10 +2,11 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="popup.css">
-		<script defer src="../lib/chrome-extension-async.js"></script>
-		<script defer src="../lib/focus-visible.js"></script>
-		<script defer type="module" src="popup.js"></script>
+		<link href="popup.css" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+		<script src="../lib/chrome-extension-async.js" defer></script>
+		<script src="../lib/focus-visible.js" defer></script>
+		<script src="popup.js" type="module" defer></script>
 		<title>Workspaces</title>
 	</head>
 
