Replace confirm dialog with a new Remove view

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -27,8 +27,18 @@
 			<div id="workspace-color-picker"></div>
 
 			<div class="buttons">
-				<button class="button" id="workspace-remove">Remove</button>
-				<button class="button primary" id="workspace-save">Done</button>
+				<button class="button remove-button">Remove</button>
+				<button class="button button-primary save-button">Done</button>
+			</div>
+		</div>
+
+		<div id="view-remove" class="view">
+			<h1>Remove Workspace?</h1>
+			<p>Do you really want to remove <strong class="workspace-name"></strong> with <span class="workspace-tab-count"></span>?</p>
+
+			<div class="buttons">
+				<button class="button cancel-button">Cancel</button>
+				<button class="button remove-button">Remove</button>
 			</div>
 		</div>
 	</body>
