--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -41,5 +41,12 @@
 				<button class="button remove-button">Remove</button>
 			</div>
 		</div>
+
+		<div id="view-debug" class="view">
+			<h1>Debug Screen</h1>
+
+			<button class="button run-tests-button">Run Tests</button><br/>
+			<button class="button clear-data-button">Clear Data</button><br/>
+		</div>
 	</body>
 </html>
