--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -45,8 +45,10 @@
 		<div id="view-debug" class="view">
 			<h1>Debug Screen</h1>
 
-			<button class="button run-tests-button">Run Tests</button><br/>
-			<button class="button clear-data-button">Clear Data</button><br/>
+			<div class="action-list">
+				<button class="button run-tests-button">Run Tests</button>
+				<button class="button clear-data-button">Clear User Data</button>
+			</div>
 		</div>
 	</body>
 </html>
