--- a/test/testRunner.html
+++ b/test/testRunner.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <script src="testRunner.js" type="module"></script>
+    <title>Workspaces Test Runner</title>
+    <script src="testRunner.js" type="module" defer></script>
 </head>
 <body></body>
 </html>
