--- a/test/testRunner.html
+++ b/test/testRunner.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Workspaces Test Runner</title>
-    <script src="testRunner.js" type="module" defer></script>
+    <script src="/src/lib/chrome-extension-async.js" defer></script>
+    <script src="/test/testRunner.js" type="module" defer></script>
 </head>
-<body></body>
+<body>
+    <h1>Open DevTools to check results</h1>
+</body>
 </html>
