Do not create initial empty workspaces

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -4,9 +4,9 @@
 		<meta charset="UTF-8">
 		<link href="popup.css" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-		<script src="../lib/chrome-extension-async.js" defer></script>
-		<script src="../lib/focus-visible.js" defer></script>
-		<script src="popup.js" type="module" defer></script>
+		<script src="../lib/chrome-extension-async.js"></script>
+		<script src="../lib/focus-visible.js"></script>
+		<script src="popup.js" type="module"></script>
 		<title>Workspaces</title>
 	</head>
 
