Improve Add new workspace button

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -21,7 +21,11 @@
 		<div id="view-list" class="view">
 			<h1>Workspaces</h1>
 			<div class="workspace-list">...</div>
-			<button class="new-button"><i class="bi bi-plus"></i>Add New</button>
+			<div class="buttons">
+				<button class="button new-button" title="Create workspace">
+					<i class="bi bi-plus"></i>New
+				</button>
+			</div>
 		</div>
 
 		<div id="view-detail" class="view">
