--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -42,7 +42,7 @@
 			</label>
 
 			<div class="buttons">
-				<button class="button remove-button">Remove</button>
+				<button class="button remove-button" tabindex="-1">Remove</button>
 				<button class="button button-primary save-button">Done</button>
 			</div>
 		</div>
