Better explaining text in Remove view

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -57,8 +57,10 @@
 		</div>
 
 		<div id="view-remove" class="view">
-			<h1>Remove Workspace?</h1>
-			<p>Do you really want to remove <strong class="workspace-name"></strong> with <span class="workspace-tab-count"></span>?</p>
+			<h1>Remove Workspace</h1>
+			<p>Do you really want to remove <strong class="workspace-name"></strong> workspace?</p>
+
+			<p class="description"></p>
 
 			<div class="buttons">
 				<button class="button cancel-button">Cancel</button>
