--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -73,7 +73,7 @@
 
 			<div class="action-list">
 				<button class="button run-tests-button">Run Tests</button>
-				<button class="button clear-data-button">Clear User Data</button>
+				<button class="button clear-data-button">Clear Data</button>
 			</div>
 		</div>
 	</body>
