Support import and export workspaces (#18)
Change-Id: Id01faefe723d8e3a37f4583b0364344da9882c68

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -29,5 +29,13 @@
 				</label>
 			</dd>
 		</dl>
+		<dl>
+			<dt>Import & Export:</dt>
+			<dd class="button">
+				<button id="import">Import</button>
+				<button id="export">Export</button>
+			</dd>
+			<dd class="info">Success!</dd>
+		</dl>
 	</body>
 </html>
