Import & export (Issue #18)

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -59,13 +59,14 @@
 				</label>
 			</dd>
 		</dl>
+		
 		<dl>
-			<dt>Import & Export:</dt>
+			<dt>Import & Export</dt>
 			<dd class="button">
 				<button id="import">Import</button>
 				<button id="export">Export</button>
 			</dd>
-			<dd class="info">Success!</dd>
+			<dd id="import-info">Success!</dd>
 		</dl>
 	</body>
 </html>
